UpgradeToJava21